error messages for register and logout
